bug 123633, save prefs when closing last window, r=sgehani, sr=jag